manifest_with_ingress.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: telemetry-server-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telemetry-server-example
  template:
    metadata:
      labels:
        app: telemetry-server-example
    spec:
      containers:
        - name: telemetry-backend
          image: 'REPLACE IMAGE'
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: telemetry-server-example
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: telemetry-server-example
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: telemetry-server-example
spec:
  rules:
  - host: 'REPLACE HOST'
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: telemetry-server-example
            port:
              number: 80
