manifest_with_route.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: telemetry-server-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telemetry-server-example
  template:
    metadata:
      labels:
        app: telemetry-server-example
    spec:
      containers:
        - name: telemetry-backend
          image: 'REPLACE IMAGE'
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: telemetry-server-example
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: telemetry-server-example
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: telemetry-server-example
spec:
  host: 'REPLACE HOST'
  path: /
  to:
    kind: Service
    name: telemetry-server-example
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
